# TreyEngine

./: LICENSE  README.md  main.py  pyproject.toml  setup.cfg
examples/: main.py
trey/: __init__.py  colors.py  game_globals.py  graphics.py  image.py  keyboard.py  maths.py  scene.py  test.py  window.py
