[metadata]
name = TreyEngine
version = 0.0.1
author = Trey Johnson
author_email = treydog027@gmail.com
url = https://github.com/Trey-Johnson3/TreyEngine
description = A 2D game framework for Python
long_description = file: README.md 
long_description_content_type = text/markdown
keywords = game, python, 2D
license = file: LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find
install_requires = 
    pysdl2
